recovery: mokee-ify
Change-Id: I0416339454fb2b8fc5511fbf0e9d23f0103d14b4

--- a/etc/init.rc
+++ b/etc/init.rc
@@ -101,7 +101,7 @@ service adbd /sbin/adbd --root_seclabel=u:r:su:s0 --device_banner=recovery
     seclabel u:r:adbd:s0
 
 # Restart adbd so it can run as root
-on property:lineage.service.adb.root=1
+on property:mk.service.adb.root=1
     restart adbd
 
 # setup_adbd will start adb once it has checked the keys
